--- a/zips/service.subtitles.subsro/index.html
+++ b/zips/service.subtitles.subsro/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="UTF-8"><title>Index of /zips/service.subtitles.subsro/</title></head>
-<body>
-<h1>Index of /zips/service.subtitles.subsro/</h1>
-<pre>
-<a href="service.subtitles.subsro-1.0.1.zip">service.subtitles.subsro-1.0.1.zip</a>
-</pre>
-</body>
-</html>
+<body><h1>Index of /zips/service.subtitles.subsro/</h1><pre>
+<a href="service.subtitles.subsro-1.0.2.zip">service.subtitles.subsro-1.0.2.zip</a>
+</pre></body></html>
